--- a/Css/estudios.css
+++ b/Css/estudios.css
@@ -1,7 +1,8 @@
 .estudios {
   display: flex;
+  width: 80%;
   justify-content: center;
-  padding: 2rem;
+  margin: 0 auto;
   color: azure;
 }
 
@@ -12,44 +13,10 @@
   line-height: 2.5rem; /* spacing between text paragraphs */
   font-size: large;
   margin: 8rem;
-}
 
-/* Phone (small screens, up to 767px) */
-@media (max-width: 767px) {
-  .container-estudios {
-    width: 100%;
-    margin: 0rem;
-  }
-  .estudios {
-    width: 100%;
-    padding: 1rem;
-    margin-top: 1rem;
-    font-size: small;
-  }
-}
+  & .container-estudios-section {
 
-/* tablets (medium size screens, between 768px and 1023px */
-@media (min-width: 768px) and (max-width: 1023px) {
-  .estudios {
-    width: 75%;
+    & img {
+      border-radius: 50%;
+    }
   }
-  .container-estudios-section {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    gap: 2rem;
-  }
-}
-
-/* Desktop (wide screens, 1024px and above) */
-@media (min-width: 1024px) {
-  .estudios {
-    width: 75%;
-  }
-  .container-estudios-section {
-    display: flex;
-    align-items: center;
-    width: 100%;
-    gap: 2rem;
-  }
-}
